update date format

--- a/popup/week.html
+++ b/popup/week.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
 
-  <body>
+  <body style="text-align: center;">
     <div id="currentDate">
       
     </div>
